--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ numpy==1.26.2
 packaging==23.2
 pandas==2.1.4
 Pillow==10.1.0
+psycopg2-binary==2.9.9
 pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
@@ -21,3 +22,4 @@ soupsieve==2.5
 sqlparse==0.4.4
 typing_extensions==4.9.0
 tzdata==2023.4
+whitenoise==6.6.0
