--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cycler==0.12.1
 dj-database-url==2.1.0
 Django==4.2.8
 django-bootstrap-v5==1.0.11
+django-storages==1.14.2
 fonttools==4.47.0
 gunicorn==21.2.0
 jmespath==1.0.1
