--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,19 @@ asgiref==3.7.2
 beautifulsoup4==4.12.2
 boto3==1.34.13
 botocore==1.34.13
+certifi==2023.11.17
+charset-normalizer==3.3.2
+cloudinary==1.37.0
 contourpy==1.2.0
 cycler==0.12.1
 dj-database-url==2.1.0
 Django==4.2.8
 django-bootstrap-v5==1.0.11
+django-cloudinary-storage==0.3.0
 django-storages==1.14.2
 fonttools==4.47.0
 gunicorn==21.2.0
+idna==3.6
 jmespath==1.0.1
 kiwisolver==1.4.5
 matplotlib==3.8.2
@@ -21,6 +26,7 @@ psycopg2-binary==2.9.9
 pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
+requests==2.31.0
 s3transfer==0.10.0
 six==1.16.0
 soupsieve==2.5
